# digital-twin

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_refactoring.py
digital_twin/: __init__.py  models.py  utils.py
digital_twin/algorithms/: __init__.py  fleet_optimization.py  integration.py  performance_prediction.py  risk_assessment.py
digital_twin/analysis/: __init__.py  benchmarking.py  comparisons.py  performance.py  transition.py
digital_twin/api/: __init__.py  middleware.py  rest.py  schemas.py
digital_twin/core/: __init__.py  attributes.py  constants.py  models.py  types.py  validation.py
digital_twin/data/: __init__.py  generators.py  loaders.py  preprocessors.py  providers.py
digital_twin/economics/: __init__.py  cash_flow.py  depreciation.py  incentives.py  risk.py  roi.py
digital_twin/geospatial/: __init__.py  climate.py  locations.py  routes.py  terrain.py
digital_twin/infrastructure/: __init__.py  capacity.py  charging.py  grid.py  hydrogen.py
digital_twin/models/: __init__.py  equations.py
digital_twin/optimization/: __init__.py  constraints.py  fleet_optimizer.py  objectives.py  solvers.py
digital_twin/physics/: __init__.py  degradation.py  emissions.py  energy.py  thermodynamics.py
digital_twin/simulation/: __init__.py  forecasting.py  monte_carlo.py  scenarios.py  sensitivity.py
digital_twin/utils/: __init__.py  conversions.py  date_utils.py  formatters.py  math_utils.py  validators.py
digital_twin/visualization/: __init__.py  charts.py  dashboards.py  exports.py  reports.py
notebooks/: 01_technology_comparison.ipynb  02_monte_carlo_risk.ipynb
